fix: horizontal scroll on mobile

--- a/docs/src/landing/css/reactive-kitten.webflow.css
+++ b/docs/src/landing/css/reactive-kitten.webflow.css
@@ -822,6 +822,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 .div-block-30 {
